syntax = "proto3";

package raft;

service Raft {
  rpc RequestVote(RequestVoteRequest) returns (RequestVoteResponse);
  rpc AppendEntries(AppendEntriesRequest) returns (AppendEntriesResponse);
}

message RequestVoteRequest {
  uint64 term = 1;
  uint64 candidate_id = 2;
}

message RequestVoteResponse {
  uint64 term = 1;
  bool vote_granted = 2;
}

message LogEntry {
  uint64 term = 1;
  bytes command = 2; // our KV operations later
}

message AppendEntriesRequest {
  uint64 term = 1;
  uint64 leader_id = 2;
  uint64 prev_log_index = 3;
  uint64 prev_log_term = 4;
  repeated LogEntry entries = 5;
  uint64 leader_commit = 6;
}

message AppendEntriesResponse {
  uint64 term = 1;
  bool success = 2;
}
